public class Endereco {
    private String id; // Pode ser o CPF da pessoa
    private String rua;
    private String cidade;

    public Endereco(String id, String rua, String cidade) {
        this.id = id;
        this.rua = rua;
        this.cidade = cidade;
    }

    // Getters e Setters
    public String getId() { return id; }
    public String getRua() { return rua; }
    public void setRua(String rua) { this.rua = rua; }
    public String getCidade() { return cidade; }
    public void setCidade(String cidade) { this.cidade = cidade; }
    
    @Override
    public String toString() {
        return "Endereço [ID=" + id + ", Rua=" + rua + ", Cidade=" + cidade + "]";
    }
}