public class RecursoNaoEncontradoException extends Exception {
    public RecursoNaoEncontradoException(String message) {
        super(message);
    }
}